--- a/settings.json
+++ b/settings.json
@@ -7,12 +7,12 @@
 	"anticall": true,
 	"prefix": ".",
 	"language":"ind",
-	"ownerNumber": "62887435047326",
-	"ownerNumberr": "62887435047326",
+	"ownerNumber": "6281333389713",
+	"ownerNumberr": "6281333389713",
 	"cr": "@ZeeoneOfc",
-	"ownername": "ZeeoneOfc",
+	"ownername": "@DinarXT",
 	"botname":"ΛᄂPΉΛ BӨƬ",
 	"thumb":"thumbnail_1.jpg",
 	"fakethumb":"thumbnail_1.jpg", 
-	"fake": " 「  ΛᄂPΉΛ BӨƬ  」\nCreated By @ZeeoneOfc"
+	"fake": " 「  ΛᄂPΉΛ BӨƬ  」\nCreated By @DinarXT"
 }
